[gd_scene load_steps=7 format=3 uid="uid://b1k6aawlgctpw"]

[ext_resource type="Script" path="res://Assets/Modules/Decor/Views/DecorTableView.gd" id="1_76bo2"]
[ext_resource type="Texture2D" uid="uid://ckq68jipjo20o" path="res://Assets/Textures/Stage/table_3.png" id="2_32g5g"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wsks1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sd36r"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gglkp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ysvh"]
size = Vector2(32, 104)

[node name="Table" type="Node2D" node_paths=PackedStringArray("ItemSprite", "HoverButton", "InteractArea")]
script = ExtResource("1_76bo2")
ItemSprite = NodePath("ItemSprite")
HoverButton = NodePath("HoverButton")
InteractArea = NodePath("InteractArea")

[node name="HoverButton" type="Button" parent="."]
modulate = Color(2, 2, 2, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -48.5
offset_right = 62.0
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_wsks1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_sd36r")
theme_override_styles/normal = SubResource("StyleBoxTexture_gglkp")
icon = ExtResource("2_32g5g")

[node name="ItemSprite" type="Sprite2D" parent="."]
offset = Vector2(0, -40)

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(0, 100)
shape = SubResource("RectangleShape2D_8ysvh")
debug_color = Color(0.515554, 0.576144, 3.85046e-07, 0.42)
